    identical, I'll restore the original text as a Spanish translation.
  * In general, don't send a progress queue message when completing a task,
    only when starting one. There's no point constructing translatable text
    that's only going to be on the screen for tiny fractions of a second
    anyway.
  * Strip newlines from lines in messages.txt.

  * Fix Config.get_locales() using DebconfCommunicator.
  * Try fetching timezone from /etc/localtime as well as from /etc/timezone.
  * Handle missing keymap and/or locale debconf questions.
  * Fix kernel version detection.
  * Use 'lsb_release -is' rather than reading /etc/lsb-release directly.
  * Depend on lsb-release.
  * Don't preselect a mount point for /home.
  * Fix unmounting at end of installation.
  * Remove ubuntu-express wrapper script; eventually we'll do whatever
    unmounting is necessary during the partitioning step rather than turning
    off swap for the whole installer (and partman should help with this
    already).
  * Install installer script as /usr/bin/espresso rather than
    /usr/bin/installer.

  * Use dh_installdocs to install documentation.
  * Remove unnecessary ${shlibs:Depends} dependencies.
  * Fix broken use of debhelper; the author seemed to be confusing -A and
    -a, and in any case we only build architecture-independent packages.
  * Use dh_install instead of verbose code in debian/rules (which includes a
    bashism anyway).
  * Remove hardcoded svn commands in generate-doc.sh.
  * Remove svn exclusion stuff in debian/rules; if building from a
    Subversion checkout, you should use standard workarounds to avoid .svn
    directories.
  * Remove generated source code documentation for now; it's really not
    terribly useful, certainly not in the espresso binary package, and
    ultimately it should be generated as part of the build process if at
    all.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  5 Dec 2005 12:27:33 +0000

ubuntu-express (0.99-1) breezy; urgency=low
